--- a/src/landing.css
+++ b/src/landing.css
@@ -1,4 +1,3 @@
-/* Container for the entire landing section */
 .landing-container {
   display: flex;
   justify-content: space-between;
@@ -6,7 +5,6 @@
   gap: 2rem;
 }
 
-/* Form section */
 .form-container {
   width: 45%;
 }
@@ -16,8 +14,8 @@
   text-align: center;
 }
 
-/* Style for the form itself */
   .form-container form{
+    padding: 15px;
     border: solid 2px rgb(164, 159, 159);
     width: 100%;
     display: flex;
